test_regress/t/t_var_static_assign_decl_bad.out
%Error-UNSUPPORTED: t/t_var_static_assign_decl_bad.v:70:18: Static variable declaration assignment
                                                          : with I/O variable inside a function/task
   70 |      logic tmp = in;
      |                  ^~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_var_static_assign_decl_bad.v:75:18: Static variable declaration assignment
                                                          : with I/O variable inside a function/task
   75 |      logic tmp = in;
      |                  ^~
%Error-UNSUPPORTED: t/t_var_static_assign_decl_bad.v:86:25: Static variable declaration assignment
                                                          : with I/O variable inside a function/task
   86 |      static logic tmp = in;
      |                         ^~
%Error-UNSUPPORTED: t/t_var_static_assign_decl_bad.v:98:18: Static variable declaration assignment
                                                          : with I/O variable inside a function/task
   98 |      logic tmp = out;
      |                  ^~~
%Error-UNSUPPORTED: t/t_var_static_assign_decl_bad.v:103:21: Static variable declaration assignment
                                                           : with I/O variable inside a function/task
  103 |      logic tmp = in + 1;
      |                     ^
%Error-UNSUPPORTED: t/t_var_static_assign_decl_bad.v:9:15: Static variable declaration assignment
                                                         : with I/O variable inside a function/task
    9 |   logic tmp = in;
      |               ^~
%Error-UNSUPPORTED: t/t_var_static_assign_decl_bad.v:14:15: Static variable declaration assignment
                                                          : with I/O variable inside a function/task
   14 |   logic tmp = in;
      |               ^~
%Error-UNSUPPORTED: t/t_var_static_assign_decl_bad.v:20:18: Static variable declaration assignment
                                                          : with I/O variable inside a function/task
   20 |      logic tmp = in;
      |                  ^~
%Error-UNSUPPORTED: t/t_var_static_assign_decl_bad.v:25:18: Static variable declaration assignment
                                                          : with I/O variable inside a function/task
   25 |      logic tmp = in;
      |                  ^~
%Error-UNSUPPORTED: t/t_var_static_assign_decl_bad.v:32:18: Static variable declaration assignment
                                                          : with I/O variable inside a function/task
   32 |      logic tmp = in;
      |                  ^~
%Error-UNSUPPORTED: t/t_var_static_assign_decl_bad.v:37:18: Static variable declaration assignment
                                                          : with I/O variable inside a function/task
   37 |      logic tmp = in;
      |                  ^~
%Error-UNSUPPORTED: t/t_var_static_assign_decl_bad.v:44:18: Static variable declaration assignment
                                                          : with I/O variable inside a function/task
   44 |      logic tmp = in;
      |                  ^~
%Error-UNSUPPORTED: t/t_var_static_assign_decl_bad.v:49:18: Static variable declaration assignment
                                                          : with I/O variable inside a function/task
   49 |      logic tmp = in;
      |                  ^~
%Error: Exiting due to
